TST-571, TST-579 Fxied contrast issues on join store Moved over new styleguide from main store

--- a/assets/scss/_styleguide.scss
+++ b/assets/scss/_styleguide.scss
@@ -25,7 +25,7 @@
             padding-left:10%;
             position:relative;
             .guide-label{
-                color:$silver;
+                color:$text-gray;
             }
         }
         &.style-logos{
@@ -47,7 +47,7 @@
                 dl{
                     display:flex;
                     dt{
-                        color:$silver;
+                        color:$text-gray;
                         margin-top:30px;
                         margin-right:20px;
                         max-width:100px;
@@ -100,6 +100,11 @@
             .button-alternate{
                 &.hover{
                     @extend .button-alternate:hover;
+                }
+            }
+            .button-cancel{
+                &.hover{
+                    @extend .button-cancel:hover;
                 }
             }
             .styleitem-content{
